testsuite/tests/dependent/should_fail/RenamingStar.hs
{-# LANGUAGE KindSignatures, NoStarIsType #-}

module RenamingStar where

data Foo :: *
